<resources>
    <string name="app_name">AUSWP </string>
    <string name="home">Home</string>
    <string name="committee">Committee</string>
    <string name="events">Events</string>
    <string name="tracker">Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="AUSWP_logo">AUSWP Logo</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_help">Help</string>
    <string name="nav_open_drawer">Open</string>
    <string name="nav_close_drawer">Close</string>
    <string name="Welcome">The Official home of all things AUSWP</string>
    <string name="Next_Event">Next Event</string>
    <string name="water_polo_training">Water Polo Training</string>
    <string name="time">19:45-20:45</string>
    <string name="date">27/02/2021</string>
    <string name="location">Sports Centre Pool</string>
    <string name="view_Event">View Event</string>
    <string name="tracker_inf">Access the latest sets and training advice from our coaches or use the workout tracker to log data from your latest session</string>
    <string name="Sets">View the latest sets from the coaches</string>
    <string name="log_workout">Log Your Workout</string>
    <string name="dateAct">Enter Date and Activity</string>
    <string name="ActStats">Enter Activity Stats</string>
    <string name="swim_sets">Swimming Sets</string>
    <string name="wp_tips">Water Polo Tips</string>
    <string name="example_swim">Warm Up</string>
    <string name="set">4x50 Free  2x100 Kick</string>
    <string name="set_main">Main Set</string>
    <string name="main_set">16x25 Sprint 4x100 IM</string>
    <string name="tip1_wp">Don\'t lean back when taking a shot</string>
    <string name="tip2_wp">Use Egg Beater to aid treading water</string>
    <string name="tip3_wp">Make use of subs during games</string>
    <string name="date_text">Date</string>
    <string name="event_text">Events</string>
    <string name="day_one">01 MON</string>
    <string name="day_2">02 TUE</string>
    <string name="day_3">03 WED</string>
    <string name="swim_training">Swim Training</string>
    <string name="time2swim">07:15 - 08:15</string>
    <string name="day_4">06 SAT</string>
    <string name="name">Callum Binner</string>
    <string name="email">Crb20@aber.ac.uk</string>


    <string name="Coaching_centre">Coaching Centre</string>

    <string name="workout">Workout Tracker</string>
    <string name="add_Workout">Add Workout</string>
    <string name="Date">Enter Date</string>
    <string name="Activity">Enter Activity Name</string>
    <string name="add_to_Cal">Add To Calendar</string>
    <string name="event">Event</string>
    <string name="login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Not Registered? Sign Up here</string>
    <string name="name_">Name</string>
    <string name="createAcount">Sign Up</string>
    <string name="register">Register Account</string>
    <string name="Logout">Logout</string>

    <string name="eventTitle">Event Title</string>
    <string name="eventTime">Event Time</string>
    <string name="eventDate">Event Date</string>
    <string name="eventLocation">Event Location</string>
    <string name="addEvent">Add Event</string>

    <string name="Register">Register Your Account</string>
    <string name="admin">Admin</string>
    <string name="workoutStats">Workout Information</string>
    <string name="wokroutName">Workout Name</string>
    <string name="wokroutDate">Workout Date</string>
    <string name="titleInfo">Your Event </string>
    <string name="eventDateInfo">Date</string>
    <string name="eventTimeInfo">Time</string>
    <string name="eventLocationInfo">Location</string>

    <string name="dateFormat">Event Date - YYYY/MM/DD</string>

</resources>